housekeeping: removing obsolete mixins, also z-index issue #fixes 465

--- a/app/assets/stylesheets/partials/_modules.scss
+++ b/app/assets/stylesheets/partials/_modules.scss
@@ -284,7 +284,7 @@
 .dropdown_section {
   display: none;
   position: absolute;
-  z-index: 1;
+  z-index: 4;
 }
 
 .dropdown_lining {
